indico/modules/rb_new/client/js/components/pages/Landing.module.scss
/* This file is part of Indico.
 * Copyright (C) 2002 - 2018 European Organization for Nuclear Research (CERN).
 *
 * Indico is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License as
 * published by the Free Software Foundation; either version 3 of the
 * License, or (at your option) any later version.
 *
 * Indico is distributed in the hope that it will be useful, but
 * WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Indico; if not, see <http://www.gnu.org/licenses/>.
 */

$text-blue: #2a606b;

.landing-page {
    .landing-page-form {
        height: 700px;
        background-image: url('../../../../../../web/static/images/globe.png');
        background-size: cover;

        &::before {
            content: ' ';
            width: 100%;
            height: 100%;
            position: absolute;
            background-color: rgba(255, 255, 255, 0.4);
        }

        :global(.inline.fields) {
            align-self: center;
            display: inline-flex;
        }

        :global(.ui.checkbox label) {
            color: $text-blue;
            font-weight: bold;
        }

        .search-input :global(.ui.icon.input) {
            width: 300px;
        }

        .booking-date :global(.ui.icon.input) {
            width: 250px;
        }
    }
}

